--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,6 +1,7 @@
 doctype
 html
 head
+  meta(name='apple-mobile-web-app-capable' content='yes')
   meta(charset='utf-8')
   meta(name='viewport', content='width=device-width, initial-scale=1')
 
