--- a/src/style/page.styl
+++ b/src/style/page.styl
@@ -4,3 +4,13 @@ body
 #game
   max-width 640px
   margin 0 auto
+  
+#inserttext
+    display none
+    position absolute
+    color white
+    
+#scoreboard
+    display none
+    position absolute
+    color white
