fixed scoreboard style

--- a/src/style/page.styl
+++ b/src/style/page.styl
@@ -1,5 +1,8 @@
 body
   margin 0
+  background-color #000000
+  font-family Arial, 'Helvetica Neue', Helvetica, sans-serif
+  color white
 
 #game
   max-width 640px
@@ -8,10 +11,26 @@ body
 #inserttext
     display none
     position absolute
-    color white
     text-align center
+    left 0px
+    margin 50px 10% 50px 10%
+    width 80%
     
 #scoreboard
     display none
     position absolute
+    text-align center
+    left 0px
+    margin 50px 20% 50px 20%
+    padding-bottom 20px
+    width 60%
+    background-color #222222
+    
+#scores
+    text-align left
+    margin-left 15px
+    
+#restart
     color white
+    font-size 35px
+    text-decoration none
