--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -2,7 +2,8 @@ doctype
 html
 head
   script(src="//www.parsecdn.com/js/parse-1.3.4.min.js")
-  meta(name='apple-mobile-web-app-capable' content='yes')
+  meta(name="apple-mobile-web-app-status-bar-style" content="black")
+  meta(name="apple-mobile-web-app-capable" content="yes")
   meta(charset='utf-8')
   meta(name='viewport', content='width=device-width, initial-scale=1')
 
