Now it fill almost every mobile screen and the form to submit is usable on a phone

--- a/src/style/page.styl
+++ b/src/style/page.styl
@@ -13,7 +13,7 @@ body
     position absolute
     text-align center
     left 0px
-    margin 50px 10% 50px 10%
+    margin 30px 10% 50px 10%
     width 80%
     
 #scoreboard
@@ -21,7 +21,7 @@ body
     position absolute
     text-align center
     left 0px
-    margin 50px 20% 50px 20%
+    margin 30px 20% 50px 20%
     padding-bottom 20px
     width 60%
     background-color #222222
@@ -31,6 +31,10 @@ body
     margin-left 15px
     
 #restart
-    color white
-    font-size 35px
-    text-decoration none
+    font-size 20px
+    
+#playername
+    font-size 20px
+
+#submit
+    font-size 20px
