Added a retry button if you don't want to submit. Fixed the scoreboard so that it shows your score

--- a/src/style/page.styl
+++ b/src/style/page.styl
@@ -32,9 +32,15 @@ body
     
 #restart
     font-size 20px
+    padding 5px
     
 #playername
     font-size 20px
 
 #submit
     font-size 20px
+    padding 5px
+    
+#fastrestart
+    font-size 20px
+    padding 5px
